2010-06-04  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-annotate-post-process): fixup number
	of whitespaces in padding string.

2010-05-21  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	Patch by Ola Nilsson <ola.nilsson@gmail.com> for Bug #6

	* vc-clearcase.el (vc-clearcase-annotate-command): use the %SNd
	"short numerical date" for the dates in the annotate lines.
	(clearcase-annotate-months): removed.
	(clearcase-annotate-date-rx, clearcase-annotate-mktime): updated
	for the new date format.
	(clearcase-annotate-post-process): reformat the timestamps in the
	buffer to to DD/MM/YYYY format.

2010-04-30  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-hijack-file-handler): make the
	hijacked file writable

2010-04-27  Alexandru Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-version): 476 updated to 3.4-pre

2010-04-23  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* ucm.el (ucm-checked-out-files): doc update
	(ucm-activity-files): new function

2010-04-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* ucm.el (ucm-checkin-activity): use `vc-setup-buffer' when
	setting up the diff buffer

2010-04-09  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-version-backup-file-name): use just the last
	branch and the revision for backups, the full revision string is
	too long.  Bug #4

2010-04-08  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-delete-file): add -force argument
	to rmname command

2010-03-24  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-file-fprop): try different ways of
	obtaining the files FPROP in order
	(clearcase-file-fprop): Check if the buffer denoted by
	`vc-parent-buffer' actually has an associated file.
	(vc-clearcase-diff): setup the *vc-diff* buffer using
	`vc-setup-buffer'

2010-03-08  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-vob-tag-for-path): on windows,